<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/day"
    tools:context=".addalarmscreen.view.AddAlarmActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_alarm"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/weather_details_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/grayTransparent"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/white"
        app:strokeWidth="0.75dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/alarmDuration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteY="44dp">

                <TextView
                    android:id="@+id/alarmDurationTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingLeft="16dp"
                    android:text="@string/alarm_duration"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/alarmFromEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:elevation="8dp"
                    app:boxBackgroundColor="#FFF"
                    app:boxStrokeColor="@color/MainColor"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toStartOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/alarmDurationTxt">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:focusable="false"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/from"
                        android:inputType="text"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/alarmToEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:elevation="8dp"
                    app:boxBackgroundColor="#FFF"
                    app:boxStrokeColor="#FFF"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/alarmDurationTxt">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:focusable="false"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/to"
                        android:inputType="text"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/alarmTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/alarmDuration">

                <TextView
                    android:id="@+id/alarmTimeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingLeft="16dp"
                    android:text="@string/alarm_time"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/alarmTimeEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:elevation="8dp"
                    app:boxBackgroundColor="#FFF"
                    app:boxStrokeColor="@color/MainColor"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/alarmTimeTxt">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:focusable="false"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/time"
                        android:inputType="text"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/radiobtns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"

                app:layout_constraintTop_toBottomOf="@id/alarmTime">


                <TextView
                    android:id="@+id/alarmSoundTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingLeft="16dp"
                    android:text="@string/alarm_sound"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/alarmSoundGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/alarmSoundTxt">

                    <RadioButton
                        android:id="@+id/notification_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_regular"
                        android:buttonTint="@color/white"
                        android:text="@string/notificationTxt"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/alarm_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/alarm"
                        android:buttonTint="@color/white"

                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </RadioGroup>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radiobtns">

                <Button
                    android:id="@+id/addAlarm_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/Add"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:cornerRadius="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:strokeColor="@color/MainColor"
                    app:strokeWidth="1dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>